[package]
name = "chive-master"
version = "0.1.0"
edition = "2021"

[package.metadata.cross.build]
default-target = "x86_64-unknown-linux-gnu"
pre-build = [
  "apt-get update && apt-get install build-essential pkg-config libsqlite3-dev libssl-dev libfontconfig-dev -y",
]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ubuntu:22.04"

[dependencies]
tokio = { version = "1.43.0", default-features = false, features = [
  "rt-multi-thread",
] }
serenity = "0.12.4"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.9.0"
anyhow = "1.0.95"
dotenv = "0.15.0"
url = "2.5.4"
chrono = "0.4.39"
unic-emoji-char = "0.9.0"
tabled = "0.18.0"
strum = "0.27.1"
strum_macros = "0.27.1"
linked-hash-map = "0.5.6"
tokio-cron-scheduler = "0.13.0"
regex = "1.11.1"
